# seasontracker

./: README.md  pyproject.toml  yaml_example.yaml
seasontracker/: __init__.py  cli.py  gmail.py  seasons.py  tokens.py
